--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-     <h1> Menu </h1>
-
-     
-    
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Menu</title>
 </head>
-
 <body>
         <a href="garanhus.html" garanhus></a>
         <a href="recife.html" recife></a>
         <a href="coreiadosul.html" coreia do sul></a>
         <a href="sãopaulo.html" São Paulo></a>
-   
 </body>
 </html>
