--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>Menu</title>
 </head>
 <body>
-        <a href="garanhus.html" garanhus></a>
-        <a href="recife.html" recife></a>
-        <a href="coreiadosul.html" coreia do sul></a>
-        <a href="sãopaulo.html" São Paulo></a>
+        <a href="garanhus.html">Garanhus</a><br>
+        <a href="recife.html">Recife></a><br>
+        <a href="coreiadosul.html"> Coreia do Sul></a><br>
+        <a href="sãopaulo.html"> São Paulo></a><br>
 </body>
 </html>
