--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="pt-br">
 <head>
         <meta charset="UTF-8">
-        <title>Menu</title>
+        
 </head>
-<body>
+<body> 
+
+        <h1> pagina principal</h1>
+        
         <a href="garanhus.html">Garanhus</a><br>
         <a href="recife.html">Recife></a><br>
         <a href="coreiadosul.html"> Coreia do Sul></a><br>
