--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-        <meta charset="UTF-8">
-        <title>Menu</title>
+    <meta charset="UTF-8">
+    <title>Atividades de Breno</title>
 </head>
 <body>
-        <a href="garanhus.html" garanhus></a>
-        <a href="recife.html" recife></a>
-        <a href="coreiadosul.html" coreia do sul></a>
-        <a href="sãopaulo.html" São Paulo></a>
+    <h1>Atividades de Breno</h1>
+    <h2>Gabriela Nayara</h2>
+    <ul>
+        <li><a href="/exemplos/index.html">exemplos</a></li>
+        <li><a href="/atv1/index.html">Atividade 1</a></li>
+    </ul>
 </body>
 </html>
