fiz as little alterações

--- a/exemplos/formulario.html
+++ b/exemplos/formulario.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Formulário de Exemplo</title>
+  
 </head>
 <body>
-
-  <form action="/processar_dados" method="post">
-    <label for="nome">Nome:</label><br>
-    <input type="text" id="nome" name="Gabriela"><br><br>
+        <h1>formulario</h1>
+  
+    
 
     <label for="email">E-mail: </label><br>
-    <input type="email" id="email" name="gaby."><br><br>
+    <input type="email" id="email" name="email"><br><br>
+    
+    <label for="caleular">celular: </label><br>
+    <input type="celular" id="celular" name="celular"><br><br>
+    <p>
+      leve uma bolsa
+    </p>
+
 
     <input type="submit" value="Enviar">
   </form>
