--- a/exemplos.html/index.html
+++ b/exemplos.html/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="/exemplos/index.html">exemplos</a></li>
         <li><a href="/atv1/index.html">Atividade 1</a></li>
+        <li><a href="/atividades2/index.html">Atividade 2</a></li>
     </ul>
 
 </body>
