--- a/exemplos.html/index.html
+++ b/exemplos.html/index.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD:exemplos.html/index.html
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -9,28 +9,8 @@
     <h1>Atividades de Breno</h1>
     <h2>Gabriela Nayara</h2>
     <ul>
-        <li><a href="/exemplos/index.html">exemplos</a></li>
-        <li><a href="/atv1/index.html">Atividade 1</a></li>
-        <li><a href="/atividades2/index.html">Atividade 2</a></li>
+        <li><a href="exemplos/index.html">exemplos</a></li>
+        <li><a href="atv1/index.html">Atividade 1</a></li>
+        <li><a href="atividades2/index.html">Atividade 2</a></li>
     </ul>
 
-</body>
-</html>
-=======
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Atividades de Breno</title>
-</head>
-<body>
-    <h1>Atividades de Breno</h1>
-    <h2>Gabriela Nayara</h2>
-    <ul>
-        <li><a href="/exemplos/index.html">exemplos</a></li>
-        <li><a href="/atv1/index.html">Atividade 1</a></li>
-    </ul>
-
-</body>
-</html>
->>>>>>> 11143890e1dab2405032e66d4a8c3b6a6dd6d675:index.html
