--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <li><a href="atv1/index.html">Atividade 1</a></li>
         <li><a href="atividades2/index.html">Atividade 2</a></li>
         <li><a href="atv4/index.html">Atividade 4</a></li>
+        <li><a href="avl1/index.html">Avaliação 1</a></li>
+        <li><a href="av2/index.html">Avaliação 2</a></li>
+
 
     </ul>
 
