--- a/av2/index.html
+++ b/av2/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>site para APP</title>
+  <title>PlataformaDev</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -10,11 +10,11 @@
 
   <!-- MENU LATERAL -->
   <aside class="sidebar">
-    <h1>SITE PARA APP</h1>
+    <h1>PlataformaDev</h1>
     <nav>
       <a href="#inicio">Início</a>
       <a href="#recursos">Recursos</a>
-      <a href="#caracteristicas">Caracteristicas</a>
+      <a href="#guias">Guias</a>
       <a href="#colaboracao">Colaboração</a>
     </nav>
   </aside>
@@ -22,46 +22,46 @@
   <!-- CONTEÚDO -->
   <main class="content">
 
-    <!-- HERO / BANNER -->
+    <!-- HERO -->
     <section class="hero" id="inicio">
       <div class="hero-text">
         <h2>Criação de soluções digitais</h2>
         <p>
-          Um projeto com visual moderno para demonstrar organização,
-          clareza e boas práticas no desenvolvimento de aplicações.
+          Estrutura moderna para apresentar projetos
+          de desenvolvimento de aplicações.
         </p>
         <button>Conhecer projeto</button>
       </div>
     </section>
 
-    <!-- RECURSOS -->
-    <section id="recursos">
-      <h2>Recursos do projeto</h2>
+    <!-- SEÇÃO COM BANNER LATERAL -->
+    <section class="secao-destaque">
 
-      <div class="cards">
-        <div class="card">
-          <h3>Visual moderno</h3>
-          <p>Interface clara com foco em leitura e organização.</p>
-        </div>
+      <div class="texto-destaque">
+        <h2>Organização e tecnologia</h2>
+        <p>
+          Um layout pensado para unir clareza visual
+          e conceitos modernos de desenvolvimento.
+        </p>
 
-        <div class="card">
-          <h3>Estrutura limpa</h3>
-          <p>Separação lógica dos elementos do site.</p>
-        </div>
-
-        <div class="card">
-          <h3>Projeto evolutivo</h3>
-          <p>Base preparada para futuras melhorias.</p>
+        <div class="cards-pequenos">
+          <div class="card-mini">Layout modular</div>
+          <div class="card-mini">Código limpo</div>
+          <div class="card-mini">Base escalável</div>
         </div>
       </div>
+
+      <!-- BANNER LATERAL COM IMAGEM -->
+      <div class="banner-lateral"></div>
+
     </section>
 
     <!-- GUIAS -->
     <section id="guias">
       <h2>Conteúdo explicativo</h2>
       <p class="texto-central">
-        Materiais criados para apoiar o aprendizado e o entendimento
-        da estrutura de aplicações modernas.
+        Materiais criados para apoiar o aprendizado
+        e a compreensão da estrutura do projeto.
       </p>
     </section>
 
@@ -69,8 +69,7 @@
     <section id="colaboracao">
       <h2>Espaço de colaboração</h2>
       <p class="texto-central">
-        Área destinada à troca de ideias e construção coletiva
-        de conhecimento em projetos educacionais.
+        Área voltada à troca de ideias e desenvolvimento coletivo.
       </p>
     </section>
 
