--- a/av2/index.html
+++ b/av2/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>PlataformaDev</title>
+  <title> APP</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -10,12 +10,12 @@
 
   <!-- MENU LATERAL -->
   <aside class="sidebar">
-    <h1>PlataformaDev</h1>
+    <h1>SITE PARA APP</h1>
     <nav>
       <a href="#inicio">Início</a>
       <a href="#recursos">Recursos</a>
-      <a href="#guias">Guias</a>
-      <a href="#colaboracao">Colaboração</a>
+      <a href="#caracteristicas">Caracteristicas</a>
+      <a href="#ajuda">ajuda</a>
     </nav>
   </aside>
 
