--- a/av2/index.html
+++ b/av2/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title> APP</title>
+  <title>DevPlatform</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -10,27 +10,27 @@
 
   <!-- MENU LATERAL -->
   <aside class="sidebar">
-    <h1>SITE PARA APP</h1>
+    <h1>DevPlatform</h1>
     <nav>
-      <a href="#inicio">Início</a>
-      <a href="#recursos">Recursos</a>
-      <a href="#caracteristicas">Caracteristicas</a>
-      <a href="#ajuda">ajuda</a>
+      <a href="#inicio">Visão Geral</a>
+      <a href="#recursos">Ferramentas</a>
+      <a href="#aprendizado">Aprendizado</a>
+      <a href="#interacao">Interação</a>
     </nav>
   </aside>
 
   <!-- CONTEÚDO -->
   <main class="content">
 
-    <!-- HERO -->
+    <!-- BANNER PRINCIPAL -->
     <section class="hero" id="inicio">
       <div class="hero-text">
-        <h2>Criação de soluções digitais</h2>
+        <h2>Desenvolvimento de aplicações modernas</h2>
         <p>
-          Estrutura moderna para apresentar projetos
-          de desenvolvimento de aplicações.
+          Uma base visual criada para apresentar conceitos,
+          organização e boas práticas no desenvolvimento de software.
         </p>
-        <button>Conhecer projeto</button>
+        <button>Começar agora</button>
       </div>
     </section>
 
@@ -38,38 +38,39 @@
     <section class="secao-destaque">
 
       <div class="texto-destaque">
-        <h2>Organização e tecnologia</h2>
+        <h2>Estrutura pensada para crescer</h2>
         <p>
-          Um layout pensado para unir clareza visual
-          e conceitos modernos de desenvolvimento.
+          Um ambiente que demonstra como aplicações podem ser
+          organizadas desde o início.
         </p>
 
         <div class="cards-pequenos">
-          <div class="card-mini">Layout modular</div>
-          <div class="card-mini">Código limpo</div>
-          <div class="card-mini">Base escalável</div>
+          <div class="card-mini">Componentização</div>
+          <div class="card-mini">Organização</div>
+          <div class="card-mini">Escalabilidade</div>
         </div>
       </div>
 
-      <!-- BANNER LATERAL COM IMAGEM -->
+      <!-- BANNER DE TECNOLOGIA -->
       <div class="banner-lateral"></div>
 
     </section>
 
-    <!-- GUIAS -->
-    <section id="guias">
-      <h2>Conteúdo explicativo</h2>
+    <!-- APRENDIZADO -->
+    <section id="aprendizado">
+      <h2>Conteúdo progressivo</h2>
       <p class="texto-central">
-        Materiais criados para apoiar o aprendizado
-        e a compreensão da estrutura do projeto.
+        Materiais criados para ajudar no entendimento
+        da estrutura de aplicações e no desenvolvimento gradual.
       </p>
     </section>
 
-    <!-- COLABORAÇÃO -->
-    <section id="colaboracao">
-      <h2>Espaço de colaboração</h2>
+    <!-- INTERAÇÃO -->
+    <section id="interacao">
+      <h2>Troca de conhecimento</h2>
       <p class="texto-central">
-        Área voltada à troca de ideias e desenvolvimento coletivo.
+        Espaço voltado à colaboração, ideias e aprendizado
+        em projetos educacionais e demonstrativos.
       </p>
     </section>
 
