--- a/av2/index.html
+++ b/av2/index.html
@@ -2,75 +2,73 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>DevPlatform</title>
+  <title>AppTech</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
   <!-- MENU LATERAL -->
-  <aside class="sidebar">
-    <h1>DevPlatform</h1>
+  <aside class="menu">
+    <h1>AppTech</h1>
     <nav>
-      <a href="#inicio">Visão Geral</a>
-      <a href="#recursos">Ferramentas</a>
-      <a href="#aprendizado">Aprendizado</a>
-      <a href="#interacao">Interação</a>
+      <a href="#overview">Visão Geral</a>
+      <a href="#estrutura">Estrutura</a>
+      <a href="#recursos">Recursos</a>
+      <a href="#comunidade">Colaboração</a>
     </nav>
   </aside>
 
   <!-- CONTEÚDO -->
-  <main class="content">
+  <main class="container">
 
     <!-- BANNER PRINCIPAL -->
-    <section class="hero" id="inicio">
-      <div class="hero-text">
-        <h2>Desenvolvimento de aplicações modernas</h2>
+    <section class="banner">
+      <div class="banner-text">
+        <h2>Plataforma para criação de aplicações</h2>
         <p>
-          Uma base visual criada para apresentar conceitos,
-          organização e boas práticas no desenvolvimento de software.
+          Um espaço visual pensado para apresentar conceitos,
+          organização e tecnologia de forma clara e moderna.
         </p>
-        <button>Começar agora</button>
+        <button>Explorar conteúdo</button>
       </div>
     </section>
 
     <!-- SEÇÃO COM BANNER LATERAL -->
-    <section class="secao-destaque">
+    <section class="layout-info" id="estrutura">
 
-      <div class="texto-destaque">
-        <h2>Estrutura pensada para crescer</h2>
+      <div class="info-text">
+        <h2>Base organizada</h2>
         <p>
-          Um ambiente que demonstra como aplicações podem ser
-          organizadas desde o início.
+          Estrutura criada para demonstrar como projetos
+          podem crescer de forma organizada.
         </p>
 
-        <div class="cards-pequenos">
-          <div class="card-mini">Componentização</div>
-          <div class="card-mini">Organização</div>
-          <div class="card-mini">Escalabilidade</div>
+        <div class="mini-cards">
+          <div class="mini-card">Componentes</div>
+          <div class="mini-card">Boas práticas</div>
+          <div class="mini-card">Evolução contínua</div>
         </div>
       </div>
 
       <!-- BANNER DE TECNOLOGIA -->
-      <div class="banner-lateral"></div>
+      <div class="tech-banner"></div>
 
     </section>
 
-    <!-- APRENDIZADO -->
-    <section id="aprendizado">
-      <h2>Conteúdo progressivo</h2>
-      <p class="texto-central">
-        Materiais criados para ajudar no entendimento
-        da estrutura de aplicações e no desenvolvimento gradual.
+    <!-- RECURSOS -->
+    <section id="recursos">
+      <h2>Conteúdo técnico</h2>
+      <p class="center-text">
+        Materiais desenvolvidos para apoiar estudos
+        e compreensão da estrutura de aplicações.
       </p>
     </section>
 
-    <!-- INTERAÇÃO -->
-    <section id="interacao">
-      <h2>Troca de conhecimento</h2>
-      <p class="texto-central">
-        Espaço voltado à colaboração, ideias e aprendizado
-        em projetos educacionais e demonstrativos.
+    <!-- COMUNIDADE -->
+    <section id="comunidade">
+      <h2>Colaboração aberta</h2>
+      <p class="center-text">
+        Espaço dedicado à troca de ideias e aprendizado coletivo.
       </p>
     </section>
 
