--- a/av2/index.html
+++ b/av2/index.html
@@ -2,19 +2,18 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>AppTech</title>
+  <title> APP</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- MENU LATERAL -->
   <aside class="menu">
-    <h1>AppTech</h1>
+    <h1> Site para APP</h1>
     <nav>
-      <a href="#overview">Visão Geral</a>
-      <a href="#estrutura">Estrutura</a>
-      <a href="#recursos">Recursos</a>
-      <a href="#comunidade">Colaboração</a>
+      <a href="#paginaprincipal">Pagina Principal</a>
+      <a href="#caracteristicas">caracteristicas</a>
+      <a href="#ajuda">ajuda</a>
     </nav>
   </aside>
 
@@ -44,9 +43,9 @@
         </p>
 
         <div class="mini-cards">
-          <div class="mini-card">Componentes</div>
+          <div class="mini-card">informações</div>
           <div class="mini-card">Boas práticas</div>
-          <div class="mini-card">Evolução contínua</div>
+
         </div>
       </div>
 
